# quant-stock

./: .gitignore  ALPHA_ARENA_RULES.md  FACTOR_AUTOTUNE_TODO.md  FACTOR_RESEARCH_TODO.md  Readme.md  build.sh  package-lock.json
docs/: 1.md  (+1 more)
quant_stock_core/: .config  Makefile  README.md  config.example.toml  pyproject.toml  quant_worker.py  quant_worker.spec  requirements.txt
quant_stock_core/common/arena/: __init__.py  framework.py  registry.py
quant_stock_core/common/config/: __init__.py  desktop_settings.py  settings.py
quant_stock_core/scripts/: __init__.py  analyze_policy_support.py  analyze_state_team_holders.py  compare_factor_model_runs.py  crash_warning_model_worker.py  daily_signal.py  data_update_worker.py  evaluate_limit_signals.py  evaluate_ml_factor_budget_grid.py  evaluate_strategies.py  factor_autotune_worker.py  factor_research_worker.py  factor_snapshot_worker.py  limit_breakout_model_worker.py  limit_breakout_worker.py  limit_up_model_worker.py  limit_up_momentum_worker.py  longrun_optimal_factor_model.py  market_risk_state_worker.py  optimize_portfolio.py  pool_confirm.py  profit_arena_worker.py  run_backtest.py  run_portfolio_candidate.py  scan_market_files.py  strategy_model_validate_worker.py  strategy_quality_overlay.py  t0_daily_worker.py  verify_core_e2e.py
quant_stock_core/tests/: test_factor_autotune_worker.py  test_factor_research_worker_features.py  test_market_utils.py  test_ml_factor_ranker.py  test_mysql_infra.py  test_profit_arena_capacity_gate.py  test_run_status_task_type.py  test_smoke.py  test_worker_mysql_cache.py
(+150 files in other folders)
