[project]
name = "quant-stock-core"
version = "0.1.0"
description = "Quant stock strategy, signal, and backtest core used by the desktop app."
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.14.0",
  "pandas>=2.1.0",
  "polars>=0.20.0",
  "numpy>=1.26.0",
  "duckdb>=0.10.0",
  "pyarrow>=15.0.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.3.0",
  "lightgbm>=4.3.0",
  "statsmodels>=0.14.0",
  "tqdm>=4.66.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "loguru>=0.7.0",
  "pymysql>=1.1.0",
]

[project.scripts]
quant-pool-confirm = "scripts.pool_confirm:main"
quant-run-backtest = "scripts.run_backtest:main"
quant-evaluate-strategies = "scripts.evaluate_strategies:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
packages = [
  "common",
  "common.config",
  "common.infra",
  "common.utils",
  "research",
  "research.data",
  "research.data.storage",
  "research.factors",
  "research.universe",
  "scripts",
  "tests",
  "trading",
  "trading.backtest",
  "trading.execution",
  "trading.strategy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
